container-orchestrator/weather-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
spec:
  type: NodePort
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30083
